Fixed block 2 cards layout

--- a/Web/index.html
+++ b/Web/index.html
@@ -83,7 +83,7 @@
 		</div>
 
 		<div class="web-row2">
-			<div class="card-b card1">
+			<div class="card-block-2">
 				<div class="card-col">
 					<p class="card-text-40">Secure Asset Issuance</p>
 					<p class="card-text2">
@@ -91,10 +91,10 @@
 					</p>
 				</div>
 
-				<object data="assets/card/card-shield-tick.svg" class="card-global card-shield-tick" type="image/svg+xml"></object>
+				<object data="assets/card/card-shield-tick.svg" class="card-block2-img" type="image/svg+xml"></object>
 			</div>
 
-			<div class="card-b card2">
+			<div class="card-block-2">
 				<div class="card-col">
 					<p class="card-text-40">High-Performance Operations</p>
 					<p class="card-text2">
@@ -102,10 +102,10 @@
 					</p>
 				</div>
 
-				<object data="assets/card/card-share.svg" class="card-global card-shield-tick" type="image/svg+xml"></object>
+				<object data="assets/card/card-share.svg" class="card-block2-img" type="image/svg+xml"></object>
 			</div>
 
-			<div class="card-b card3">
+			<div class="card-block-2">
 				<div class="card-col">
 					<p class="card-text-40">Fiat-Digital Integration</p>
 					<p class="card-text2">
@@ -113,10 +113,10 @@
 					</p>
 				</div>
 
-				<object data="assets/card/card-link.svg" class="card-global card-shield-tick" type="image/svg+xml"></object>
+				<object data="assets/card/card-link.svg" class="card-block2-img" type="image/svg+xml"></object>
 			</div>
 
-			<div class="card-b card4">
+			<div class="card-block-2">
 				<div class="card-col">
 					<p class="card-text-40">General-Purpose Money</p>
 					<p class="card-text2">
@@ -124,7 +124,7 @@
 					</p>
 				</div>
 
-				<object data="assets/card/card-global.svg" class="card-global card-shield-tick" type="image/svg+xml"></object>
+				<object data="assets/card/card-global.svg" class="card-block2-img" type="image/svg+xml"></object>
 			</div>
 		</div>
 
