Comparisons block refactor

--- a/Web/index.html
+++ b/Web/index.html
@@ -48,7 +48,7 @@
 			<p>Global Reach</p>
 		</div>
 
-		<div class="card-a card-right1">
+		<div class="web-col-bottom card-right1">
 			<p>Contact Sales</p>
 
 			<div class="card-circle">
@@ -73,7 +73,7 @@
 				BlockControl brings enterprise-grade digital asset management to the public, enabling secure stablecoin issuance and management. Our platform supports the evolution from crypto trading tools to general-purpose tokenized money, integrating payment stablecoins with traditional fiat rails through robust 24/7 operations, virtually free transactions ($0.01 each), and high-velocity processing (9,000 TPS).
 			</p>
 
-			<div class="card-a row-bottom1">
+			<div class="web-col-bottom row-bottom1">
 				<p>Launch Your Own Stablecoin</p>
 
 				<div class="card-circle">
@@ -206,26 +206,25 @@
 
 			<div class="web-row4">
 				<div class="web-col-left">
-					<div class="web-row-top"></div>
-					<p class="web-text-transaction">Transaction Cost</p>
-					<p class="web-text-settlment-process">Settlment Process</p>
-					<p class="web-text-bottom">
-						Cutoff times for <br />
-						non-instant transfers
+					<p class="card-text-top"></p>
+					<p class="card-text3">Transaction Cost</p>
+					<p class="card-c-text">Settlement Process</p>
+					<p class="card-text-bottom">
+						Cutoff times for non-instant transfers
 					</p>
 				</div>
 
-				<div class="card5">
-					<p class="card-text-top2">Block Control</p>
-					<p class="card-text-0-01-usd">0.01 USD</p>
-					<p class="card-text-1-sec">1 SEC</p>
-					<p class="card-text-bottom2">No cutoff, system works 24/7</p>
+				<div class="card-c card-c-back">
+					<p class="card-text-top">Block Control</p>
+					<p class="card-text3">0.01 USD</p>
+					<p class="card-c-text">1 SEC</p>
+					<p class="card-text-bottom">No cutoff, system works 24/7</p>
 				</div>
 
 				<div class="card-c">
 					<p class="card-text-top">SEPA</p>
 					<p class="card-text3">1 EUR</p>
-					<p class="card-text4">1 min to 1 business day</p>
+					<p class="card-c-text">1 min to 1 business day</p>
 					<p class="card-text-bottom">
 						Service may set a cutoff time for some SEPA transfers
 					</p>
@@ -234,14 +233,14 @@
 				<div class="card-c">
 					<p class="card-text-top">SWIFT</p>
 					<p class="card-text3">25-45 USD</p>
-					<p class="card-text4">2-3 business days</p>
+					<p class="card-c-text">2-3 business days</p>
 					<p class="card-text-bottom">
 						Services set their own business hours and cutoff times
 					</p>
 				</div>
 			</div>
 
-			<div class="card-a row-bottom2">
+			<div class="web-col-bottom contact-us">
 				<p>Contact Us For Details</p>
 
 				<div class="card-circle">
@@ -422,7 +421,7 @@
 					Join the future of finance with BlockControl's comprehensive digital asset management platform
 				</p>
 
-				<div class="card-a row-bottom6">
+				<div class="web-col-bottom row-bottom6">
 					<p>Explore Solution</p>
 
 					<div class="card-circle">
