Refactor green link pills

--- a/Web/index.html
+++ b/Web/index.html
@@ -48,7 +48,7 @@
 			<p>Global Reach</p>
 		</div>
 
-		<div class="web-col-bottom card-right1">
+		<div class="link-pill contact-us">
 			<p>Contact Sales</p>
 
 			<div class="card-circle">
@@ -73,7 +73,7 @@
 				BlockControl brings enterprise-grade digital asset management to the public, enabling secure stablecoin issuance and management. Our platform supports the evolution from crypto trading tools to general-purpose tokenized money, integrating payment stablecoins with traditional fiat rails through robust 24/7 operations, virtually free transactions ($0.01 each), and high-velocity processing (9,000 TPS).
 			</p>
 
-			<div class="web-col-bottom row-bottom1">
+			<div class="link-pill contact-us">
 				<p>Launch Your Own Stablecoin</p>
 
 				<div class="card-circle">
@@ -240,7 +240,7 @@
 				</div>
 			</div>
 
-			<div class="web-col-bottom contact-us">
+			<div class="link-pill contact-us">
 				<p>Contact Us For Details</p>
 
 				<div class="card-circle">
@@ -421,7 +421,7 @@
 					Join the future of finance with BlockControl's comprehensive digital asset management platform
 				</p>
 
-				<div class="web-col-bottom row-bottom6">
+				<div class="link-pill explore-solution">
 					<p>Explore Solution</p>
 
 					<div class="card-circle">
