Rename general blocks; Align solutions cards

--- a/Web/index.html
+++ b/Web/index.html
@@ -37,7 +37,7 @@
 		</div>
 	</div>
 
-	<div class="web-row1">
+	<div class="top-navigation">
 		<object data="assets/web-logo.svg" class="web-logo" type="image/svg+xml"></object>
 
 		<div class="web-stack">
@@ -59,7 +59,7 @@
 
 	<img src="assets/web-img.png" class="web-img" />
 
-	<div class="web-col2">
+	<div class="main-block-1">
 		<div class="web-col-top1">
 			<div class="info-pill border">
 				<span class="info-pill-text">Blockchain and Stablecoin - The New Payments Paradigm</span>
@@ -82,7 +82,7 @@
 			</div>
 		</div>
 
-		<div class="web-row2">
+		<div class="main-block-2">
 			<div class="card-block-2">
 				<div class="card-col">
 					<p class="card-text-40">Secure Asset Issuance</p>
@@ -128,7 +128,7 @@
 			</div>
 		</div>
 
-		<div class="web-col3">
+		<div class="features-block-3">
 			<div class="web-col-top1">
                 <div class="info-pill border">
                     <span class="info-pill-text">Core Features</span>
@@ -193,7 +193,7 @@
 			</div>
 		</div>
 
-		<div class="web-col4">
+		<div class="comparison-block-4">
 			<div class="web-col-top1">
                 <div class="info-pill border">
                     <span class="info-pill-text">Comparison</span>
@@ -249,7 +249,7 @@
 			</div>
 		</div>
 
-		<div class="web-col5">
+		<div class="solutions-block-5">
 			<div class="web-col-top1">
                 <div class="info-pill border">
                     <span class="info-pill-text">Solutions</span>
@@ -259,17 +259,17 @@
 			</div>
 
 			<div class="web-row5">
-				<div class="card-left card-light">
-					<object data="assets/card-left-buildings.svg" class="global card-left-buildings" type="image/svg+xml"></object>
+				<div class="solutions-card card-light">
+					<object data="assets/card-left-buildings.svg" class="global" type="image/svg+xml"></object>
 
                     <div class="info-pill border">
                         <span class="info-pill-text">FOR BUSINESSES</span>
                     </div>
 
-					<div class="column-c col4">
+					<div class="column-c">
 						<p class="column-text2">Instant Payment Processing</p>
 
-						<div class="column-d col2">
+						<div class="column-d">
 							<div class="column-e">
 								<p class="column-text3">The Problem</p>
 								<p class="column-text4">
@@ -286,7 +286,7 @@
 						</div>
 					</div>
 
-					<div class="row-b row-bottom3">
+					<div class="row-b">
 						<div class="column-f">
 							<p class="column-text-book1">90%</p>
 							<p class="column-text-book2">Fee Reduction</p>
@@ -299,16 +299,16 @@
 					</div>
 				</div>
 
-				<div class="card7 card-light">
-					<object data="assets/card-bank.svg" class="global card-bank" type="image/svg+xml"></object>
+				<div class="solutions-card card-light">
+					<object data="assets/card-bank.svg" class="global" type="image/svg+xml"></object>
                     <div class="info-pill border">
                         <span class="info-pill-text">For Banks</span>
                     </div>
 
-					<div class="column-c col5">
+					<div class="column-c">
 						<p class="column-text2">Digital Asset Infrastructure</p>
 
-						<div class="column-d col2">
+						<div class="column-d">
 							<div class="column-e">
 								<p class="column-text3">The Problem</p>
 								<p class="column-text4">
@@ -325,7 +325,7 @@
 						</div>
 					</div>
 
-					<div class="row-b row-bottom4">
+					<div class="row-b">
 						<div class="column-f">
 							<p class="column-text-book1">24/7</p>
 							<p class="column-text-book2">Operations</p>
@@ -338,17 +338,17 @@
 					</div>
 				</div>
 
-				<div class="card-right3 card-light">
-					<object data="assets/card-right-global.svg" class="global card-right-global" type="image/svg+xml"></object>
+				<div class="solutions-card card-light">
+					<object data="assets/card-right-global.svg" class="global" type="image/svg+xml"></object>
 
                     <div class="info-pill border">
                         <span class="info-pill-text">For global transfers</span>
                     </div>
 
-					<div class="card-right-col">
-						<p class="card-right-text">Borderless Money Movement</p>
+					<div class="column-c">
+						<p class="column-text2">Borderless Money Movement</p>
 
-						<div class="column-d col6">
+						<div class="column-d">
 							<div class="column-e">
 								<p class="column-text3">The Problem</p>
 								<p class="column-text4">
@@ -365,7 +365,7 @@
 						</div>
 					</div>
 
-					<div class="row-b row-bottom5">
+					<div class="row-b">
 						<div class="column-f">
 							<p class="column-text-book1">Real-time</p>
 							<p class="column-text-book2">Global Transfers</p>
@@ -380,7 +380,7 @@
 			</div>
 		</div>
 
-		<div class="web-col6">
+		<div class="global-reach-block-6">
             <div class="web-col-top1">
                 <div class="info-pill border">
                     <span class="info-pill-text">Global Reach</span>
@@ -401,9 +401,9 @@
 			</div>
 		</div>
 
-		<div class="web-col-bottom1">
-			<div class="web-col7">
-				<div class="web-col8">
+		<div class="footer-block-7">
+			<div class="footer-center">
+				<div class="footer-graphics">
 					<object data="assets/web-graphic1.svg" class="web-graphic1" type="image/svg+xml"></object>
 
 					<div class="web-group3">
@@ -430,7 +430,7 @@
 				</div>
 			</div>
 
-			<div class="web-col-bottom2">
+			<div class="footer-bottom">
 				<div class="web-frame-top">
 					<div class="web-line"></div>
 				</div>
