More fixes for solutions cards; Clean up features block

--- a/Web/index.html
+++ b/Web/index.html
@@ -137,7 +137,7 @@
 				<h2 class="subtitle">Platform & Instruments</h2>
 			</div>
 
-			<div class="row-a row1">
+			<div class="row-a">
 				<object data="assets/row/row-icon.svg" class="row-icon" type="image/svg+xml"></object>
 
 				<div class="column-a">
@@ -148,7 +148,7 @@
 				</div>
 			</div>
 
-			<div class="web-row3">
+			<div class="row-a">
 				<object data="assets/web-icon.svg" class="web-icon" type="image/svg+xml"></object>
 
 				<div class="column-a">
@@ -159,7 +159,7 @@
 				</div>
 			</div>
 
-			<div class="row-a row2">
+			<div class="row-a">
 				<object data="assets/row/row-laptop-and1.svg" class="row-icon" type="image/svg+xml"></object>
 
 				<div class="column-a">
@@ -170,7 +170,7 @@
 				</div>
 			</div>
 
-			<div class="row-a row3">
+			<div class="row-a">
 				<object data="assets/row/row-laptop-and2.svg" class="row-icon" type="image/svg+xml"></object>
 
 				<div class="column-a">
@@ -181,7 +181,7 @@
 				</div>
 			</div>
 
-			<div class="row-a row4">
+			<div class="row-a">
 				<object data="assets/row/row-laptop-and3.svg" class="row-icon" type="image/svg+xml"></object>
 
 				<div class="column-a">
