--- a/Web/index.html
+++ b/Web/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8" />
+	<title>Block Control</title>
+	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link href="https://fonts.googleapis.com/css2?family=Manrope:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/reset.css" />
@@ -41,11 +42,11 @@
 		<object data="assets/web-logo.svg" class="web-logo" type="image/svg+xml"></object>
 
 		<div class="web-stack">
-			<p>Core Features</p>
-			<p>Key Benefits</p>
-			<p>Comparison</p>
-			<p>Solution</p>
-			<p>Global Reach</p>
+			<a href="#key-benefits">Key Benefits</a>
+			<a href="#core-features">Core Features</a>
+			<a href="#comparison">Comparison</a>
+			<a href="#solution">Solution</a>
+			<a href="#global-reach">Global Reach</a>
 		</div>
 
 		<div class="link-pill contact-us">
@@ -82,7 +83,7 @@
 			</div>
 		</div>
 
-		<div class="main-block-2">
+		<div class="main-block-2" id="key-benefits">
 			<div class="card-block-2">
 				<div class="card-col">
 					<p class="card-text-40">Secure Asset Issuance</p>
@@ -128,7 +129,7 @@
 			</div>
 		</div>
 
-		<div class="features-block-3">
+		<div class="features-block-3" id="core-features">
 			<div class="web-col-top1">
                 <div class="info-pill border">
                     <span class="info-pill-text">Core Features</span>
@@ -193,7 +194,7 @@
 			</div>
 		</div>
 
-		<div class="comparison-block-4">
+		<div class="comparison-block-4" id="comparison">
 			<div class="web-col-top1">
                 <div class="info-pill border">
                     <span class="info-pill-text">Comparison</span>
@@ -249,7 +250,7 @@
 			</div>
 		</div>
 
-		<div class="solutions-block-5">
+		<div class="solutions-block-5" id="solution">
 			<div class="web-col-top1">
                 <div class="info-pill border">
                     <span class="info-pill-text">Solutions</span>
@@ -380,7 +381,7 @@
 			</div>
 		</div>
 
-		<div class="global-reach-block-6">
+		<div class="global-reach-block-6" id="global-reach">
             <div class="web-col-top1">
                 <div class="info-pill border">
                     <span class="info-pill-text">Global Reach</span>
