main-block-1 restructured

--- a/Web/index.html
+++ b/Web/index.html
@@ -60,16 +60,18 @@
 
 	<img src="assets/web-img.png" class="web-img" />
 
-	<div class="main-block-1">
-		<div class="web-col-top1">
-			<div class="info-pill border">
-				<span class="info-pill-text">Blockchain and Stablecoin - The New Payments Paradigm</span>
-			</div>
+	<div class="main">
+		<div class="main-block-1">
+			<div class="web-col-top1">
+				<div class="info-pill border">
+					<span class="info-pill-text">Blockchain and Stablecoin - The New Payments Paradigm</span>
+				</div>
 
-			<h1 class="web-title">
-				Merge Fiat with <br />
-				Digital Assets
-			</h1>
+				<h1 class="web-title">
+					Merge Fiat with <br />
+					Digital Assets
+				</h1>
+			</div>
 			<p class="web-text-block-control text">
 				BlockControl brings enterprise-grade digital asset management to the public, enabling secure stablecoin issuance and management. Our platform supports the evolution from crypto trading tools to general-purpose tokenized money, integrating payment stablecoins with traditional fiat rails through robust 24/7 operations, virtually free transactions ($0.01 each), and high-velocity processing (9,000 TPS).
 			</p>
