Added social and contact form links; Fixed footer; Fixed responsiveness; Disable background with gradients (freeze page issue) Corrected all svg import; Separated social icons.

--- a/Web/index.html
+++ b/Web/index.html
@@ -13,8 +13,8 @@
 
 <body>
 <div class="web">
-	<img src="assets/web-pyhoo48-a.png" class="web-pyhoo48-a" />
-	<img src="assets/web-lancu.png" class="web-lancu" />
+	<img src="assets/web-pyhoo48-a.png" class="web-pyhoo48-a"  alt=""/>
+	<img src="assets/web-lancu.png" class="web-lancu"  alt=""/>
 
 	<div class="web-col1">
 		<div class="web-group1">
@@ -39,7 +39,7 @@
 	</div>
 
 	<div class="top-navigation">
-		<object data="assets/web-logo.svg" class="web-logo" type="image/svg+xml"></object>
+		<img src="assets/web-logo.svg" class="web-logo" alt="Web Logo">
 
 		<div class="web-stack">
 			<a href="#key-benefits">Key Benefits</a>
@@ -50,10 +50,10 @@
 		</div>
 
 		<div class="link-pill contact-us">
-			<p>Contact Sales</p>
+			<a href="https://form.typeform.com/to/aPurlIO4" target="_blank" rel="noopener">Contact Sales</a>
 
 			<div class="card-circle">
-				<object data="assets/card-circle-backg/card-svg.svg" class="card-svg" type="image/svg+xml"></object>
+				<img src="assets/card-circle-backg/card-svg.svg" class="card-svg" alt="">
 			</div>
 		</div>
 	</div>
@@ -77,10 +77,10 @@
 			</p>
 
 			<div class="link-pill contact-us">
-				<p>Launch Your Own Stablecoin</p>
+				<a href="https://form.typeform.com/to/aPurlIO4" target="_blank" rel="noopener">Launch Your Own Stablecoin</a>
 
 				<div class="card-circle">
-					<object data="assets/card-circle-backg/card-svg.svg" class="card-svg" type="image/svg+xml"></object>
+					<img src="assets/card-circle-backg/card-svg.svg" class="card-svg" alt="">
 				</div>
 			</div>
 		</div>
@@ -94,7 +94,7 @@
 					</p>
 				</div>
 
-				<object data="assets/card/card-shield-tick.svg" class="card-block2-img" type="image/svg+xml"></object>
+				<img src="assets/card/card-shield-tick.svg" class="card-block2-img" alt="">
 			</div>
 
 			<div class="card-block-2">
@@ -105,7 +105,7 @@
 					</p>
 				</div>
 
-				<object data="assets/card/card-share.svg" class="card-block2-img" type="image/svg+xml"></object>
+				<img src="assets/card/card-share.svg" class="card-block2-img" alt="">
 			</div>
 
 			<div class="card-block-2">
@@ -116,7 +116,7 @@
 					</p>
 				</div>
 
-				<object data="assets/card/card-link.svg" class="card-block2-img" type="image/svg+xml"></object>
+				<img src="assets/card/card-link.svg" class="card-block2-img" alt="">
 			</div>
 
 			<div class="card-block-2">
@@ -127,7 +127,7 @@
 					</p>
 				</div>
 
-				<object data="assets/card/card-global.svg" class="card-block2-img" type="image/svg+xml"></object>
+				<img src="assets/card/card-global.svg" class="card-block2-img" alt="">
 			</div>
 		</div>
 
@@ -141,7 +141,7 @@
 			</div>
 
 			<div class="row-a">
-				<object data="assets/row/row-icon.svg" class="row-icon" type="image/svg+xml"></object>
+				<img src="assets/row/row-icon.svg" class="row-icon" alt="">
 
 				<div class="column-a">
 					<h2 class="column-subtitle1">Protocol & Configuration</h2>
@@ -152,7 +152,7 @@
 			</div>
 
 			<div class="row-a">
-				<object data="assets/web-icon.svg" class="web-icon" type="image/svg+xml"></object>
+				<img src="assets/web-icon.svg" class="web-icon" alt="">
 
 				<div class="column-a">
 					<h2 class="column-subtitle1">API & SDK</h2>
@@ -163,7 +163,7 @@
 			</div>
 
 			<div class="row-a">
-				<object data="assets/row/row-laptop-and1.svg" class="row-icon" type="image/svg+xml"></object>
+				<img src="assets/row/row-laptop-and1.svg" class="row-icon" alt="">
 
 				<div class="column-a">
 					<h2 class="column-subtitle1">Smart Contracts</h2>
@@ -174,7 +174,7 @@
 			</div>
 
 			<div class="row-a">
-				<object data="assets/row/row-laptop-and2.svg" class="row-icon" type="image/svg+xml"></object>
+				<img src="assets/row/row-laptop-and2.svg" class="row-icon" alt="">
 
 				<div class="column-a">
 					<h2 class="column-subtitle1">Tokenization</h2>
@@ -185,7 +185,7 @@
 			</div>
 
 			<div class="row-a">
-				<object data="assets/row/row-laptop-and3.svg" class="row-icon" type="image/svg+xml"></object>
+				<img src="assets/row/row-laptop-and3.svg" class="row-icon" alt="">
 
 				<div class="column-a">
 					<h2 class="column-subtitle1">Programmability</h2>
@@ -244,10 +244,10 @@
 			</div>
 
 			<div class="link-pill contact-us">
-				<p>Contact Us For Details</p>
+				<a href="https://form.typeform.com/to/aPurlIO4" target="_blank" rel="noopener">Contact Us For Details</a>
 
 				<div class="card-circle">
-					<object data="assets/card-circle-backg/card-svg.svg" class="card-svg" type="image/svg+xml"></object>
+					<img src="assets/card-circle-backg/card-svg.svg" class="card-svg" alt="">
 				</div>
 			</div>
 		</div>
@@ -263,7 +263,7 @@
 
 			<div class="web-row5">
 				<div class="solutions-card card-light">
-					<object data="assets/card-left-buildings.svg" class="global" type="image/svg+xml"></object>
+					<img src="assets/card-left-buildings.svg" class="global" alt="">
 
                     <div class="info-pill border">
                         <span class="info-pill-text">FOR BUSINESSES</span>
@@ -303,7 +303,7 @@
 				</div>
 
 				<div class="solutions-card card-light">
-					<object data="assets/card-bank.svg" class="global" type="image/svg+xml"></object>
+					<img src="assets/card-bank.svg" class="global" alt="">
                     <div class="info-pill border">
                         <span class="info-pill-text">For Banks</span>
                     </div>
@@ -342,7 +342,7 @@
 				</div>
 
 				<div class="solutions-card card-light">
-					<object data="assets/card-right-global.svg" class="global" type="image/svg+xml"></object>
+					<img src="assets/card-right-global.svg" class="global" alt="">
 
                     <div class="info-pill border">
                         <span class="info-pill-text">For global transfers</span>
@@ -407,14 +407,14 @@
 		<div class="footer-block-7">
 			<div class="footer-center">
 				<div class="footer-graphics">
-					<object data="assets/web-graphic1.svg" class="web-graphic1" type="image/svg+xml"></object>
+					<img src="assets/web-graphic1.svg" class="web-graphic1" alt="">
 
 					<div class="web-group3">
-						<object data="assets/web-graphic2.svg" class="web-graphic2" type="image/svg+xml"></object>
-						<object data="assets/web-graphic3.svg" class="web-graphic3" type="image/svg+xml"></object>
+						<img src="assets/web-graphic2.svg" class="web-graphic2" alt="">
+						<img src="assets/web-graphic3.svg" class="web-graphic3" alt="">
 					</div>
 
-					<img src="assets/web-3d-cubes.png" class="web-3d-cubes" />
+					<img src="assets/web-3d-cubes.png" class="web-3d-cubes"  alt="">
 				</div>
 
 				<h2 class="web-subtitle-ready-to">
@@ -425,22 +425,26 @@
 				</p>
 
 				<div class="link-pill explore-solution">
-					<p>Explore Solution</p>
+					<a href="https://form.typeform.com/to/aPurlIO4" target="_blank" rel="noopener">Explore Solution</a>
 
 					<div class="card-circle">
-						<object data="assets/card-circle-backg/card-svg.svg" class="card-svg" type="image/svg+xml"></object>
+						<img src="assets/card-circle-backg/card-svg.svg" class="card-svg" alt="">
 					</div>
 				</div>
 			</div>
 
 			<div class="footer-bottom">
-				<div class="web-frame-top">
-					<div class="web-line"></div>
-				</div>
-
+				<div class="web-line"></div>
 				<div class="web-row6">
 					<p>©2025 All rights reserved.</p>
-					<object data="assets/web-graphic4.svg" class="web-graphic-right" type="image/svg+xml"></object>
+					<div class="social">
+						<a href="https://www.linkedin.com/company/blockcontrolio" target="_blank" rel="noopener">
+							<img src="assets/social/linkedin.svg" class="social-icon" alt="LinkedIn Social Icon">
+						</a>
+						<a href="https://x.com/blockcontrolio">
+							<img src="assets/social/x.svg" class="social-icon" alt="X Social Icon">
+						</a>
+					</div>
 				</div>
 			</div>
 		</div>
