Add partners section (arbitrum)

--- a/Mobile/index.html
+++ b/Mobile/index.html
@@ -463,7 +463,21 @@
 				</div>
 			</div>
 		</div>
-		
+
+		<div class="mob-col9" id="partners">
+			<div class="asds-b asds5">
+				<p class="asds-text2">Our Partners</p>
+			</div>
+			<div class="">
+				<div class="column-b">
+					<a href="https://arbitrum.foundation" target="_blank" rel="noopener">
+						<img src="assets/arbitrum-arb-logo.svg" class="partner-icon" alt="Arbitrum Foundation">
+					</a>
+					<span class="">Arbitrum Foundation</span>
+				</div>
+			</div>
+		</div>
+
 		<div class="mob-col9" id="global-reach">
 			<div class="asds-b asds5">
 				<p class="asds-text2">Global Reach</p>
