--- a/Web/index.html
+++ b/Web/index.html
@@ -383,6 +383,22 @@
 			</div>
 		</div>
 
+		<div class="partners-block" id="partners">
+			<div class="web-col-top1">
+				<div class="info-pill border">
+					<span class="info-pill-text">Our Partners</span>
+				</div>
+			</div>
+			<div class="">
+				<div class="column-b">
+					<a href="https://arbitrum.foundation" target="_blank" rel="noopener">
+						<img src="assets/arbitrum-arb-logo.svg" class="partners-icon" alt="Arbitrum Foundation">
+					</a>
+					<span class="">Arbitrum Foundation</span>
+				</div>
+			</div>
+		</div>
+
 		<div class="global-reach-block-6" id="global-reach">
             <div class="web-col-top1">
                 <div class="info-pill border">
